--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3025,22 +3025,6 @@
   number = {4}
 }
 
-@article{kochDiurnalPatternsLeaf1994a,
-  title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
-  shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
-  author = {Koch, G. W. and Amthor, J. S. and Goulden, M. L.},
-  date = {1994-04-01},
-  journaltitle = {Tree Physiology},
-  volume = {14},
-  pages = {347--360},
-  issn = {0829-318X, 1758-4469},
-  doi = {10.1093/treephys/14.4.347},
-  url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/14.4.347},
-  urldate = {2021-04-13},
-  langid = {english},
-  number = {4}
-}
-
 @article{kochDiurnalPatternsLeaf1994b,
   title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
   shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
@@ -4401,6 +4385,42 @@
   url = {http://www.nature.com/articles/nplants2016129},
   urldate = {2020-07-17},
   file = {C\:\\Users\\Me\\Zotero\\storage\\R9V64PHN\\Michealtz et al. 2016.pdf},
+  langid = {english},
+  number = {9}
+}
+
+@article{michaletzEnergeticCarbonEconomic2016a,
+  title = {The Energetic and Carbon Economic Origins of Leaf Thermoregulation},
+  author = {Michaletz, Sean T. and Weiser, Michael D. and McDowell, Nate G. and Zhou, Jizhong and Kaspari, Michael and Helliker, Brent R. and Enquist, Brian J.},
+  date = {2016-08-22},
+  journaltitle = {Nature Plants},
+  volume = {2},
+  pages = {1--9},
+  publisher = {{Nature Publishing Group}},
+  issn = {2055-0278},
+  doi = {10.1038/nplants.2016.129},
+  url = {http://www.nature.com/articles/nplants2016129},
+  urldate = {2021-04-14},
+  abstract = {Leaf thermoregulation has been documented in a handful of studies, but the generality and origins of this pattern are unclear. We suggest that leaf thermoregulation is widespread in both space and time, and originates from the optimization of leaf traits to maximize leaf carbon gain across and within variable environments. Here we use global data for leaf temperatures, traits and photosynthesis to evaluate predictions from a novel theory of thermoregulation that synthesizes energy budget and carbon economics theories. Our results reveal that variation in leaf temperatures and physiological performance are tightly linked to leaf traits and carbon economics. The theory, parameterized with global averaged leaf traits and microclimate, predicts a moderate level of leaf thermoregulation across a broad air temperature gradient. These predictions are supported by independent data for diverse taxa spanning a global air temperature range of ∼60\,°C. Moreover, our theory predicts that net carbon assimilation can be maximized by means of a trade-off between leaf thermal stability and photosynthetic stability. This prediction is supported by globally distributed data for leaf thermal and photosynthetic traits. Our results demonstrate that the temperatures of plant tissues, and not just air, are vital to developing more accurate Earth system models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\X7M8FL22\\nplants2016129.html},
+  issue = {9},
+  langid = {english},
+  number = {9}
+}
+
+@article{michaletzEnergeticCarbonEconomic2016b,
+  title = {The Energetic and Carbon Economic Origins of Leaf Thermoregulation},
+  author = {Michaletz, Sean T. and Weiser, Michael D. and McDowell, Nate G. and Zhou, Jizhong and Kaspari, Michael and Helliker, Brent R. and Enquist, Brian J.},
+  date = {2016-09},
+  journaltitle = {Nature Plants},
+  volume = {2},
+  pages = {16129},
+  issn = {2055-0278},
+  doi = {10.1038/nplants.2016.129},
+  url = {http://www.nature.com/articles/nplants2016129},
+  urldate = {2021-04-14},
+  abstract = {Leaf thermoregulation has been documented in a handful of studies, but the generality and origins of this pattern are unclear. We suggest that leaf thermoregulation is widespread in both space and time, and originates from the optimization of leaf traits to maximize leaf carbon gain across and within variable environments. Here we use global data for leaf temperatures, traits and photosynthesis to evaluate predictions from a novel theory of thermoregulation that synthesizes energy budget and carbon economics theories. Our results reveal that variation in leaf temperatures and physiological performance are tightly linked to leaf traits and carbon economics. The theory, parameterized with global averaged leaf traits and microclimate, predicts a moderate level of leaf thermoregulation across a broad air temperature gradient. These predictions are supported by independent data for diverse taxa spanning a global air temperature range of ∼60\,°C. Moreover, our theory predicts that net carbon assimilation can be maximized by means of a trade­off between leaf thermal stability and photosynthetic stability. This prediction is supported by globally distributed data for leaf thermal and photosynthetic traits. Our results demonstrate that the temperatures of plant tissues, and not just air, are vital to developing more accurate Earth system models.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MXQYRSIE\\Michaletz et al. - 2016 - The energetic and carbon economic origins of leaf .pdf},
   langid = {english},
   number = {9}
 }
