--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -946,6 +946,43 @@
   number = {4}
 }
 
+@article{cavaleriHeightMoreImportant2010,
+  title = {Height Is More Important than Light in Determining Leaf Morphology in a Tropical Forest},
+  author = {Cavaleri, Molly A. and Oberbauer, Steven F. and Clark, David B. and Clark, Deborah A. and Ryan, Michael G.},
+  date = {2010},
+  journaltitle = {Ecology},
+  volume = {91},
+  pages = {1730--1739},
+  issn = {1939-9170},
+  doi = {10.1890/09-1326.1},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/09-1326.1},
+  urldate = {2021-04-14},
+  abstract = {Both within and between species, leaf physiological parameters are strongly related to leaf dry mass per area (LMA, g/m2), which has been found to increase from forest floor to canopy top in every forest where it has been measured. Although vertical LMA gradients in forests have historically been attributed to a direct phenotypic response to light, an increasing number of recent studies have provided evidence that water limitation in the upper canopy can constrain foliar morphological adaptations to higher light levels. We measured height, light, and LMA of all species encountered along 45 vertical canopy transects across a Costa Rican tropical rain forest. LMA was correlated with light levels in the lower canopy until approximately 18 m sample height and 22\% diffuse transmittance. Height showed a remarkably linear relationship with LMA throughout the entire vertical canopy profile for all species pooled and for each functional group individually (except epiphytes), possibly through the influence of gravity on leaf water potential and turgor pressure. Models of forest function may be greatly simplified by estimating LMA-correlated leaf physiological parameters solely from foliage height profiles, which in turn can be assessed with satellite- and aircraft-based remote sensing.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/09-1326.1},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\38KQRRDB\\Cavaleri et al. - 2010 - Height is more important than light in determining.pdf;C\:\\Users\\Me\\Zotero\\storage\\IUZXQTJT\\09-1326.html},
+  keywords = {foliar morphology,leaf mass per area,light environment,shade leaves,specific leaf area,sun leaves,tropical rain forest,turgor pressure,vertical gradient,water potential},
+  langid = {english},
+  number = {6}
+}
+
+@article{cavaleriHeightMoreImportant2010a,
+  title = {Height Is More Important than Light in Determining Leaf Morphology in a Tropical Forest},
+  author = {Cavaleri, Molly A. and Oberbauer, Steven F. and Clark, David B. and Clark, Deborah A. and Ryan, Michael G.},
+  date = {2010},
+  journaltitle = {Ecology},
+  volume = {91},
+  pages = {1730--1739},
+  issn = {1939-9170},
+  doi = {10.1890/09-1326.1},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/09-1326.1},
+  urldate = {2021-04-14},
+  abstract = {Both within and between species, leaf physiological parameters are strongly related to leaf dry mass per area (LMA, g/m2), which has been found to increase from forest floor to canopy top in every forest where it has been measured. Although vertical LMA gradients in forests have historically been attributed to a direct phenotypic response to light, an increasing number of recent studies have provided evidence that water limitation in the upper canopy can constrain foliar morphological adaptations to higher light levels. We measured height, light, and LMA of all species encountered along 45 vertical canopy transects across a Costa Rican tropical rain forest. LMA was correlated with light levels in the lower canopy until approximately 18 m sample height and 22\% diffuse transmittance. Height showed a remarkably linear relationship with LMA throughout the entire vertical canopy profile for all species pooled and for each functional group individually (except epiphytes), possibly through the influence of gravity on leaf water potential and turgor pressure. Models of forest function may be greatly simplified by estimating LMA-correlated leaf physiological parameters solely from foliage height profiles, which in turn can be assessed with satellite- and aircraft-based remote sensing.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/09-1326.1},
+  keywords = {foliar morphology,leaf mass per area,light environment,shade leaves,specific leaf area,sun leaves,tropical rain forest,turgor pressure,vertical gradient,water potential},
+  langid = {english},
+  number = {6}
+}
+
 @online{ChapterTimeSeries,
   title = {Chapter 2 {{Time}} Series Graphics | {{Forecasting}}: {{Principles}}~and~{{Practice}}},
   url = {https://otexts.com/fpp2/graphics.html},
@@ -4316,6 +4353,33 @@
   pmcid = {PMC6816560}
 }
 
+@article{meinzerBiophysicalConstraintsLeaf2008,
+  title = {Biophysical Constraints on Leaf Expansion in a Tall Conifer},
+  author = {Meinzer, Frederick C. and Bond, Barbara J. and Karanian, Jennifer A.},
+  date = {2008-02-01},
+  journaltitle = {Tree Physiology},
+  volume = {28},
+  pages = {197--206},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/28.2.197},
+  url = {https://doi.org/10.1093/treephys/28.2.197},
+  urldate = {2021-04-14},
+  abstract = {The physiological mechanisms responsible for reduced extension growth as trees increase in height remain elusive. We evaluated biophysical constraints on leaf expansion in old-growth Douglas-fir (Pseudotsuga menziesii (Mirb.) Franco) trees. Needle elongation rates, plastic and elastic extensibility, bulk leaf water (ΨL) and osmotic (Ψπ) potential, bulk tissue yield threshold and final needle length were characterized along a height gradient in crowns of \&gt; 50-m-tall trees during the period between bud break and full expansion (May to June). Although needle length decreased with increasing height, there was no height-related trend in leaf plastic extensibility, which was highest immediately after bud break (2.9\%) and declined rapidly to a stable minimum value (0.3\%) over a 3-week period during which leaf expansion was completed. There was a significant positive linear relationship between needle elongation rates and plastic extensibility. Yield thresholds were consistently lower at the upper and middle crown sampling heights. The mean yield threshold across all sampling heights was 0.12 ± 0.03 MPa on June 8, rising to 0.34 ± 0.03 MPa on June 15 and 0.45 ± 0.05 MPa on June 24. Bulk leaf Ψπ decreased linearly with increasing height at a rate of 0.004 MPa m−1 during the period of most rapid needle elongation, but the vertical osmotic gradient was not sufficient to fully compensate for the 0.015 MPa m−1 vertical gradient in ΨL, implying that bulk leaf turgor declined at a rate of about 0.011 MPa m−1 increase in height. Although height-dependent reductions in turgor appeared to constrain leaf expansion, it is possible that the impact of reduced turgor was mitigated by delayed phenological development with increasing height, which resulted in an increase with height in the temperature during leaf expansion.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JH2DNUM3\\Meinzer et al. - 2008 - Biophysical constraints on leaf expansion in a tal.pdf},
+  number = {2}
+}
+
+@article{meinzerBiophysicalConstraintsLeaf2008a,
+  title = {Biophysical Constraints on Leaf Expansion in a Tall Conifer},
+  author = {Meinzer, Frederick C and Bond, Barbara J and Karanian, Jennifer A},
+  date = {2008},
+  volume = {28},
+  pages = {10},
+  abstract = {The physiological mechanisms responsible for reduced extension growth as trees increase in height remain elusive. We evaluated biophysical constraints on leaf expansion in old-growth Douglas-fir (Pseudotsuga menziesii (Mirb.) Franco) trees. Needle elongation rates, plastic and elastic extensibility, bulk leaf water (ΨL ) and osmotic (Ψπ) potential, bulk tissue yield threshold and final needle length were characterized along a height gradient in crowns of {$>$} 50-m-tall trees during the period between bud break and full expansion (May to June). Although needle length decreased with increasing height, there was no height-related trend in leaf plastic extensibility, which was highest immediately after bud break (2.9\%) and declined rapidly to a stable minimum value (0.3\%) over a 3-week period during which leaf expansion was completed. There was a significant positive linear relationship between needle elongation rates and plastic extensibility. Yield thresholds were consistently lower at the upper and middle crown sampling heights. The mean yield threshold across all sampling heights was 0.12 ± 0.03 MPa on June 8, rising to 0.34 ± 0.03 MPa on June 15 and 0.45 ± 0.05 MPa on June 24. Bulk leaf Ψπ decreased linearly with increasing height at a rate of 0.004 MPa m –1 during the period of most rapid needle elongation, but the vertical osmotic gradient was not sufficient to fully compensate for the 0.015 MPa m –1 vertical gradient in ΨL, implying that bulk leaf turgor declined at a rate of about 0.011 MPa m –1 increase in height. Although height-dependent reductions in turgor appeared to constrain leaf expansion, it is possible that the impact of reduced turgor was mitigated by delayed phenological development with increasing height, which resulted in an increase with height in the temperature during leaf expansion.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EMYC3F25\\Meinzer et al. - 2008 - Biophysical constraints on leaf expansion in a tal.pdf},
+  langid = {english}
+}
+
 @article{meirLeafRespirationTwo2001,
   title = {Leaf Respiration in Two Tropical Rainforests: Constraints on Physiology by Phosphorus, Nitrogen and Temperature},
   shorttitle = {Leaf Respiration in Two Tropical Rainforests},
@@ -4420,7 +4484,7 @@
   url = {http://www.nature.com/articles/nplants2016129},
   urldate = {2021-04-14},
   abstract = {Leaf thermoregulation has been documented in a handful of studies, but the generality and origins of this pattern are unclear. We suggest that leaf thermoregulation is widespread in both space and time, and originates from the optimization of leaf traits to maximize leaf carbon gain across and within variable environments. Here we use global data for leaf temperatures, traits and photosynthesis to evaluate predictions from a novel theory of thermoregulation that synthesizes energy budget and carbon economics theories. Our results reveal that variation in leaf temperatures and physiological performance are tightly linked to leaf traits and carbon economics. The theory, parameterized with global averaged leaf traits and microclimate, predicts a moderate level of leaf thermoregulation across a broad air temperature gradient. These predictions are supported by independent data for diverse taxa spanning a global air temperature range of ∼60\,°C. Moreover, our theory predicts that net carbon assimilation can be maximized by means of a trade­off between leaf thermal stability and photosynthetic stability. This prediction is supported by globally distributed data for leaf thermal and photosynthetic traits. Our results demonstrate that the temperatures of plant tissues, and not just air, are vital to developing more accurate Earth system models.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\MXQYRSIE\\Michaletz et al. - 2016 - The energetic and carbon economic origins of leaf .pdf},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MXQYRSIE\\qt6dg095jc.pdf},
   langid = {english},
   number = {9}
 }
@@ -5619,6 +5683,12 @@
   langid = {english}
 }
 
+@online{PhotosyntheticGasExchange,
+  title = {Photosynthetic {{Gas Exchange Responses}} of {{Australian Tropical Forest Trees}} in {{Canopy}}, {{Gap}} and {{Understory Micro}}-{{Environments}} on {{JSTOR}}},
+  url = {https://www-jstor-org.smithsonian.idm.oclc.org/stable/2389419?seq=1#metadata_info_tab_contents},
+  urldate = {2021-04-14}
+}
+
 @article{pincebourdeNarrowSafetyMargin2019,
   title = {Narrow Safety Margin in the Phyllosphere during Thermal Extremes},
   author = {Pincebourde, Sylvain and Casas, Jérôme},
@@ -6464,6 +6534,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LAMX6CCC\\Scartazza et al. - 2016 - Investigating the European beech (Fagus sylvatica .pdf;C\:\\Users\\Me\\Zotero\\storage\\BAVF6LHZ\\2465920.html},
   langid = {english},
   number = {9}
+}
+
+@article{schaferEffectTreeHeight2000,
+  title = {The Effect of Tree Height on Crown Level Stomatal Conductance},
+  author = {Schäfer, K. V. R. and Oren, R. and Tenhunen, J. D.},
+  date = {2000},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {23},
+  pages = {365--375},
+  issn = {1365-3040},
+  doi = {10.1046/j.1365-3040.2000.00553.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-3040.2000.00553.x},
+  urldate = {2021-04-14},
+  abstract = {Variation in stomatal conductance is typically explained in relation to environmental conditions. However, tree height may also contribute to the variability in mean stomatal conductance. Mean canopy stomatal conductance of individual tree crowns (GSi) was estimated using sap flux measurements in Fagus sylvatica L., and the hypothesis that GSi decreases with tree height was tested. Over 13 d of the growing season during which soil moisture was not limiting, GSi decreased linearly with the natural logarithm of vapour pressure deficit (D), and increased exponentially to saturation with photosynthetic photon flux density (Qo). Under conditions of D= 1 kPa and saturating Qo, GSi decreased by approximately 60\% with 30 m increase in tree height. Over the same range in height, sapwood-to-leaf area ratio (AS:AL) doubled. A simple hydraulic model explained the variation in GSi based on an inverse relationship with height, and a linear relationship with AS:AL. Thus, in F. sylvatica, adjustments in AS:AL partially compensate for the negative effect of increased flow-path length on leaf conductance. Furthermore, because stomata with low conductance are less sensitive to D, gas exchange of tall trees is reduced less by high D. Despite these compensations, decreasing hydraulic conductance with tree height in F. sylvatica reduces carbon uptake through a corresponding decrease in stomatal conductance.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.2000.00553.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YLDUEHZW\\Schäfer et al. - 2000 - The effect of tree height on crown level stomatal .pdf;C\:\\Users\\Me\\Zotero\\storage\\T4SDTVJG\\j.1365-3040.2000.00553.html},
+  keywords = {Fagus sylvatica,mean stomatal conductance,stomatal sensitivity,tree height},
+  langid = {english},
+  number = {4}
 }
 
 @article{scheffersMicrohabitatsReduceAnimal2013,
