--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2403,6 +2403,23 @@
   number = {1}
 }
 
+@article{hardwickRelationshipLeafArea2015,
+  title = {The Relationship between Leaf Area Index and Microclimate in Tropical Forest and Oil Palm Plantation: {{Forest}} Disturbance Drives Changes in Microclimate},
+  shorttitle = {The Relationship between Leaf Area Index and Microclimate in Tropical Forest and Oil Palm Plantation},
+  author = {Hardwick, Stephen R. and Toumi, Ralf and Pfeifer, Marion and Turner, Edgar C. and Nilus, Reuben and Ewers, Robert M.},
+  date = {2015-02-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {201},
+  pages = {187--195},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2014.11.010},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192314002780},
+  urldate = {2021-04-14},
+  abstract = {Land use change is a major threat to biodiversity. One mechanism by which land use change influences biodiversity and ecological processes is through changes in the local climate. Here, the relationships between leaf area index and five climate variables – air temperature, relative humidity, vapour pressure deficit, specific humidity and soil temperature – are investigated across a range of land use types in Borneo, including primary tropical forest, logged forest and oil palm plantation. Strong correlations with the leaf area index are found for the mean daily maximum air and soil temperatures, the mean daily maximum vapour pressure deficit and the mean daily minimum relative humidity. Air beneath canopies with high leaf area index is cooler and has higher relative humidity during the day. Forest microclimate is also found to be less variable for sites with higher leaf area indices. Primary forest is found to be up to 2.5°C cooler than logged forest and up to 6.5°C cooler than oil palm plantations. Our results indicate that leaf area index is a useful parameter for predicting the effects of vegetation upon microclimate, which could be used to make small scale climate predictions based on remotely sensed data.},
+  keywords = {Disturbance,Land use change,Leaf area index,Microclimate,Oil palm,Tropical forest},
+  langid = {english}
+}
+
 @article{harleyEffectsLightTemperature1996,
   title = {Effects of Light, Temperature and Canopy Position on Net Photosynthesis and Isoprene Emission from Sweetgum ({{Liquidambar}} Styraciflua) Leaves},
   author = {Harley, P. and Guenther, A. and Zimmerman, P.},
