--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -161,7 +161,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
 This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b].
 
-The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers rely on sunflecks for photosynthesis, where they receive 10-80% of their photon flux density in short bursts within minutes of light exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
+The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]and needle-leaf forest floors receive 17-34% of incoming sunlight [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers rely on sunflecks for photosynthesis. In some cases, they receive 10-80% of their photon flux density or 1/3 of their carbon gain from short light bursts within minutes of exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995).
 
 These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and the overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming  [@fauset_differences_2018; @millerOnlySunlitLeaves2021; @michaletzPlantThermoregulationEnergetics2015; *De Frenne et al. 2021*] 
 
@@ -174,7 +174,7 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015; @juckerCanopyStructureTopography2018]. Pine or needle-leaf forests, on the other hand, that are open-forests with sparse stands have lower buffering capacity, greater vertical air mixing and greater light permeability through canopies. They maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999;]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. 
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, such as needle-leaf forests, have lower buffering capacity, greater vertical air mixing and greater light permeability through canopy layers. They maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
 Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
@@ -200,7 +200,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. In a few European high altitude forests, trees are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and have open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) typically increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate humid-mountain forests in China, tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) to climate change increased [@liangForestTypeHeight2019]. Less capacity to buffer climatic conditions in open, high altitude forests might thus have implications to forest regeneration [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018].
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. In a few European high altitude forests, trees are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and have open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. Whereas, increase in tree height in closed-forests, typically increases buffering in the understory [@juckerCanopyStructureTopography2018].
 
 The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
@@ -209,20 +209,20 @@ The strength of buffering also varies with respect to distance to the coast, top
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Leaves try to maintain metabolic optima in order to maximize carbon assimilation, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. $T_{leaf}$ and leaf thermoregulation, thus, is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+Leaves (try to) maintain metabolic optima in order to maximize carbon assimilation, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ and leaf thermoregulation, is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions constant radiation, increase in $T_{air}$ can induce evaporative cooliing [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation, increase in $T_{air}$ can induce evaporative cooling [Drake et al. 2018] or under high $T_{air}$, can cause leaf heat stress [Fauset et al. 2018]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
-In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ in the upper canopy can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. 
+In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. 
 Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. This tends to be greater in the understory than in the canopy [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
-Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance and leaf water content [@fauset_differences_2018; *Koch et al. 1994*]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
+Leaf thermoregulation is also a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance and leaf water content [@fauset_differences_2018; *Koch et al. 1994*]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
 Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance.  However, in circumstances such as during the midday, $T_{leaf}$ can become highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low. This is caused by increase in air temperature and VPD, which limits stomatal conductance along with decreased leaf water content and leaf CO~2~ [*Koch et al. 1994*; @fauset_differences_2018]. On the other, shaded understory leaves under closed canopies should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
@@ -235,13 +235,14 @@ While small leaves remain within a few degrees of $T_{air}$, regardless of stoma
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
 Leaf processes and leaf temperature at a vertical gradient are influenced by vertical microclimate conditions. While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
 
-Particularly, in open forests, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of increased vertical air mixing, heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in an Australian open desert forest [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground 
-[@hadleyInfluenceKrummholzMat1987].  Similarly, during the dry season in a semi-decidudous tropical moist forest in Panama, sun leaves can also be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+
+Particularly, in open forests with sparse distribution of trees, such as in some needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of increased vertical air mixing, heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in Australian desert trees [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground 
+[@hadleyInfluenceKrummholzMat1987].  Similarly, during the dry season in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
-In closed-canopy forests, large leaf to air temperature differences and high leaf temperatures are found in upper canopies of tropical forests such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest in Panama in wet season [@rey-sanchez_spatial_2016], and in a temperate forest [@mauTemperateTropicalForest2018a].   
+In closed-canopy forests with increased buffering capacity, large leaf to air temperature differences and high leaf temperatures are found in the upper canopies of tropical forests such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest during the wet season in Panama [@rey-sanchez_spatial_2016], and in a temperate forest [@mauTemperateTropicalForest2018a].   
 - In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites, however $T_{leaf max}$ exceeded $T_{opt}$ at different heights and temperatures in all forests; with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
 - In a tropical wet and moist forests of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
 -"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
@@ -249,7 +250,7 @@ In closed-canopy forests, large leaf to air temperature differences and high lea
 
 ## Leaf traits 
 
-**Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water uptake, heat and metabolism across forest vertical strata, thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015]**
+**Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016], shaped by the intensity and availability of light, in order to optimize C uptake, water use, thermoregulation and metabolism across forest vertical strata, and thus show different degrees foliar plasticity [michaletzPlantThermoregulationEnergetics2015; *REFs*]**
 
 Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).
 Leaf traits are critical to maintaining desirable $T_{leaf}$ and, in turn, shaping leaf metabolism and carbon balance (following section).
@@ -257,19 +258,13 @@ It is unsuprising, then, that leaf traits vary dramatically across vertical grad
 
 #### *(clarify light vs height - 1 paragraph)*
 
-Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.
-However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. 
-Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. 
-While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
-In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*], such that gas exchange is strongly constrained by at the tops of the world's tallest trees (~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*). 
-Carbon isotope composition has also been shown to increase with height, independent of light [@cobleLightAcclimationOptimizes2015]
+Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
-Height-based leaf trait variation in two tall temperate species, *Quercus alba* and *Quercus velutina*, showed decreases in lobation with increased height, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus species.
+In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
+Under constant light conditions (photon flux density), taller trees (>35m) have lower canopy stomatal conductance compared to shorter trees  [@schaferEffectTreeHeight2000; REF]. Adaptation to increasing height and hydraulic contraints show that leaf size [@chinLeafAcclimationLight2017] and lobation [@kusiPlasticLeafMorphology2020] tend to decrease, whereas leaf mass per area (at greater than 20m) has shown to increase [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a].
 
 Disentangling the influences of hydraulic constraints, light, and other biophysical drivers that vary with height (Fig. `r fig_NEON_vertical`) on leaf form and function remains an important area for research, but is beyond the scope of the current review.
 For the purposes of interpreting the results presented here, we note that patterns across light and height gradients age generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
-
-- Beyond a certain height, light becomes less important than height in determing traits [Ambrose, Sillet, Cavaleri]
 
 - from Martijn: "If I remember correctly, height and light exposure are closely correlated and things like LMA scale with both, but above a certain level of light exposure, the effect of additional light disappears, while the relationship of the morphological traits with height continues. I have often been a bit skeptical about assuming height drives morphology, as most of the work that convincingly shows that (and relates it to turgor pressure for example) is from 100 m tall redwoods."
 
@@ -285,13 +280,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
+Leaf traits in woody species take approximately 30-60 days to stabilize to integrated light after formation [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. As a result, degrees of high to low irradiance gives rise to a dichotomy of sun and shade leaf traits. Typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves [Rozendaal et al. 2006, Mathur et al. 2018, *REFS*]. Within-species, several studies point towards these common variations in leaf anatomical, structural and biochemical trait plasticity at a vertical intra-canopy gradient based on adaptation to primarily light conditions, and as well biophysical gradient [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
-After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
-A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. 
-Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
-
-Several studies point towards common variations and differences in leaf trait plasticity within-species and at an intra-canopy gradient which influences leaf structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. The differences among these traits contribute to leaf heat dissipation strategies and leaf temperature across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
-
+An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient (???), because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny (Niinemets et al., 2015; Ishii et al., 2018) as well as geographically (Ishii et al., 2018).
 
 *(Krista: the above paragraaph is really interesting, and I like the idea of starting off the section by mentioning what controls the formation of leaf traits. However, I think it gets into more detail than needed. Also, is there work out there on how they're influenced by temperature/ water at the time of formation? I'd broaden to include the full microenviroment (without increasing length)*)
 
@@ -347,8 +338,6 @@ High light stimulates the need for photoprotection in leaves in order to protect
 - Elsa: see also H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009). -- LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light.
 
 
-As a result of different light regimes, a sun and shade leaf trait dichotomy has been established across species by various studies where typical sun leaves are often smaller in size and width, thicker, and hairier, with thicker cuticle and greater lobation than shade leaves
-[Rozendaal et al. 2006, Mathur et al. 2018, more REFS].
 
 
  "Additionally, shorter understory trees that spend the bulk of their lifecycle in the shade experience different pressures than plant that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well" -Martijn 
@@ -360,8 +349,6 @@ However, even with distinct features of sun and shade traits, trait adaptation t
 With increasing height and age, competition for light decreases as availability  of light increases in dense forests. However, depending on growth strategies of species occupying the understory, leaf traits might differ due to species inherent light requirements. Early successional species are considered more shade intolerant than late successional species that are more shade tolerant. Ontogenetic differences between the two in the understory suggests lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities in shade tolerators than in intolerators [@niinemetsControversyTraitsConferring2006]. However, the findings from the above review conflicts with  Kitajima 1994 found for tropical seedlings; shade intolerance species grew faster in the sun AND in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is a consensus by now.
 
 Shade intolerant species experience greater heterogeneity in light during ontogeny [why?-nidhi],thus LMA responds to changes in light, with shade-intolerant species displaying higher plasticity in response to light [H. Poorter, U. Niinemets, L. Poorter, I. J. Wright, R. Villar, Causes and consequences of variation in leaf mass per area (LMA): A meta-analysis. New Phytol. 182, 565–588 (2009).].Rozendaal et al. 2006 found no significant trait differences with ontogeny and adult stature trees. Koike et al. 2001 has more info about this.   
-
-An increasing number of studies point towards the importance of incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient [@chenLeafEconomicsSpectrum2020a], because LES theory was developed using mainly sun exposed (upper canopy) leaves. Given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in a simplified categorization of 'sun' and 'shade' leaves, due to variation based on within-canopy light, across functional groups, in canopy gaps, and with height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. 
 
 ##### Isoprene production
 -  Isoprene production *capability* as a trait 
