--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2416,6 +2416,7 @@
   url = {https://www.sciencedirect.com/science/article/pii/S0168192314002780},
   urldate = {2021-04-14},
   abstract = {Land use change is a major threat to biodiversity. One mechanism by which land use change influences biodiversity and ecological processes is through changes in the local climate. Here, the relationships between leaf area index and five climate variables – air temperature, relative humidity, vapour pressure deficit, specific humidity and soil temperature – are investigated across a range of land use types in Borneo, including primary tropical forest, logged forest and oil palm plantation. Strong correlations with the leaf area index are found for the mean daily maximum air and soil temperatures, the mean daily maximum vapour pressure deficit and the mean daily minimum relative humidity. Air beneath canopies with high leaf area index is cooler and has higher relative humidity during the day. Forest microclimate is also found to be less variable for sites with higher leaf area indices. Primary forest is found to be up to 2.5°C cooler than logged forest and up to 6.5°C cooler than oil palm plantations. Our results indicate that leaf area index is a useful parameter for predicting the effects of vegetation upon microclimate, which could be used to make small scale climate predictions based on remotely sensed data.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\X48W7J7I\\Hardwick et al. - 2015 - The relationship between leaf area index and micro.pdf;C\:\\Users\\Me\\Zotero\\storage\\9ILGENFQ\\S0168192314002780.html;C\:\\Users\\Me\\Zotero\\storage\\SCM4WFDZ\\S0168192314002780.html},
   keywords = {Disturbance,Land use change,Leaf area index,Microclimate,Oil palm,Tropical forest},
   langid = {english}
 }
